@@ -106,9 +106,9 @@ public abstract class Interpolation {
 		}
 	};
 
-	static public final Elastic elastic = new Elastic(2, 10);
-	static public final Elastic elasticIn = new ElasticIn(2, 10);
-	static public final Elastic elasticOut = new ElasticOut(2, 10);
+	static public final Elastic elastic = new Elastic(2, 10, 7, 1);
+	static public final Elastic elasticIn = new ElasticIn(2, 10, 7, 1);
+	static public final Elastic elasticOut = new ElasticOut(2, 10, 7, 1);
 
 	static public final Interpolation swing = new Swing(1.5f);
 	static public final Interpolation swingIn = new SwingIn(2f);
@@ -194,42 +194,44 @@ public abstract class Interpolation {
 	//
 
 	static public class Elastic extends Interpolation {
-		final float value, power;
+		final float value, power, scale, bounces;
 
-		public Elastic (float value, float power) {
+		public Elastic (float value, float power, int bounces, float scale) {
 			this.value = value;
 			this.power = power;
+			this.scale = scale;
+			this.bounces = bounces * MathUtils.PI * (bounces % 2 == 0 ? 1 : -1);
 		}
 
 		public float apply (float a) {
 			if (a <= 0.5f) {
 				a *= 2;
-				return (float)Math.pow(value, power * (a - 1)) * MathUtils.sin(a * 20) * 1.0955f / 2;
+				return (float)Math.pow(value, power * (a - 1)) * MathUtils.sin(a * bounces) * scale / 2;
 			}
 			a = 1 - a;
 			a *= 2;
-			return 1 - (float)Math.pow(value, power * (a - 1)) * MathUtils.sin((a) * 20) * 1.0955f / 2;
+			return 1 - (float)Math.pow(value, power * (a - 1)) * MathUtils.sin((a) * bounces) * scale / 2;
 		}
 	}
 
 	static public class ElasticIn extends Elastic {
-		public ElasticIn (float value, float power) {
-			super(value, power);
+		public ElasticIn (float value, float power, int bounces, float scale) {
+			super(value, power, bounces, scale);
 		}
 
 		public float apply (float a) {
-			return (float)Math.pow(value, power * (a - 1)) * MathUtils.sin(a * 20) * 1.0955f;
+			return (float)Math.pow(value, power * (a - 1)) * MathUtils.sin(a * bounces) * scale;
 		}
 	}
 
 	static public class ElasticOut extends Elastic {
-		public ElasticOut (float value, float power) {
-			super(value, power);
+		public ElasticOut (float value, float power, int bounces, float scale) {
+			super(value, power, bounces, scale);
 		}
 
 		public float apply (float a) {
 			a = 1 - a;
-			return (1 - (float)Math.pow(value, power * (a - 1)) * MathUtils.sin(a * 20) * 1.0955f);
+			return (1 - (float)Math.pow(value, power * (a - 1)) * MathUtils.sin(a * bounces) * scale);
 		}
 	}
 
