@@ -13,6 +13,7 @@
 - Texture packer, fixed image size written to atlas file.
 - API Change: Cell no longer uses primitive wrappers in public API and boxing is minimized.
 - API Addition: TextureAttribute now supports uv transform (texture regions).
+- API Change: Added parameters to Elastic Interpolation.
 
 [1.3.1]
 - API change: Viewport refactoring. https://github.com/libgdx/libgdx/pull/2220
